# atamate_test

./: Makefile  README.md  pyproject.toml
atamate_test/: signal_reader.py
tests/: singal_reader_test.py
