[tool.poetry]
name = "atamate-test"
version = "0.1.0"
description = ""
authors = ["Nikita Novikov <novickov.nick@gmail.com>"]
readme = "README.md"
packages = [{include = "atamate_test"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
pylint = "^2.16.2"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
